                                  _   _ ____  _     
                              ___| | | |  _ \| |    
                             / __| | | | |_) | |    
                            | (__| |_| |  _ <| |___ 
                             \___|\___/|_| \_\_____|

                                  Changelog


Daniel (28 October)
- Dan C tracked down yet another weird behavior in the glibc gethostbyname_r()
  function for some specific versions (reported on 2.2.5 and 2.1.1), and
  provided a fix. On Linux machines with these glibc versioins, non-ipv6
  builds of libcurl would often fail to resolve perfectly resolvable host
  names.

Daniel (26 October)
- James Bursa found out that curl_msnprintf() could write the trailing
  zero-byte outside its given buffer size. This could happen if you generated
  a very long error message as then libcurl would overwrite the ERRORBUFFER
  with one byte. Using a non-existing very long local file:// name is one case
  that could make this occur.

Daniel (24 October)
- David Hull filed bug report #829827. It identified a problem with -C - if
  the full file already was downloaded and thus the server responded with a
  416. libcurl would then wrongly use the Content-Length: header and expect
  that size to get transfer, causing a "hang" until the server closed the
  connection and then an error 18 ("still N bytes data left of the transfer").

  Now we don't return any error at all, but I think libcurl should perhaps
  return some kind of info since the requested range was out of the size of
  the document.

- Based on David Hull's fix in bug report #804599, we now check for solaris and
  gcc in configure and set the -mimpure-text link flag for linking the lib
  better.

- I've introduced a -t option to the runtests.pl script. With that option set,
  the script runs special "memory torture" tests. For each test command line
  in that section, the script first runs the command line and counts the total